# SNES_codes

./: CMakeLists.txt  KSP_heat.cpp  README.md  Res_Jac.cpp  Res_Jac_2nd.cpp  SNES_ArcLength.cpp  SNES_BFGS_nl_eqn.cpp  SNES_LeeFrame.cpp  SNES_ex1.cpp  SNES_ex16.cpp  SNES_heat.cpp  SNES_heat_MD_NR.cpp  SNES_heat_MD_NR_BFGS.cpp  SNES_heat_MD_NR_LS.cpp  test.cpp
include/: AssemblyK_SecondOrder.hpp  AssemblyN_SecondOrder.hpp  Gauss.hpp  HermiteShape.hpp  LeeFrameTools.hpp  PolyBasis.hpp  ProblemSettings.hpp  Res_Jac.hpp  Res_Jac2nd.hpp  UserPointers.hpp  UserPointersLeeFrame.hpp
